Fix center align on build

--- a/src/components/CCIP/ChainHero/ChainHero.css
+++ b/src/components/CCIP/ChainHero/ChainHero.css
@@ -1,37 +1,37 @@
-.ccip-hero {
+.ccip-chain-hero {
   background-color: var(--gray-100);
   border-bottom: 1px solid var(--gray-200);
 }
 
-.ccip-hero__grid {
+.ccip-chain-hero__grid {
   width: 100vw;
   z-index: 4;
   position: relative;
 }
 
-.ccip-hero__heading {
+.ccip-chain-hero__heading {
   color: var(--gray-900);
   display: flex;
   align-items: center;
   gap: var(--space-6x);
 }
 
-.ccip-hero__heading h1 {
+.ccip-chain-hero__heading h1 {
   margin: 0;
   font-size: 28px;
   font-weight: 500;
 }
 
-.ccip-hero__heading img {
+.ccip-chain-hero__heading img {
   width: 80px;
   height: 80px;
 }
 
-.ccip-hero__heading__images {
+.ccip-chain-hero__heading__images {
   position: relative;
 }
 
-.ccip-hero__heading__images__small {
+.ccip-chain-hero__heading__images__small {
   width: var(--space-10x) !important;
   height: var(--space-10x) !important;
   border-radius: 50%;
@@ -40,7 +40,7 @@
   position: absolute;
 }
 
-.ccip-hero__content {
+.ccip-chain-hero__content {
   --gutter: var(--space-2x);
   --doc-padding: 2rem;
   gap: var(--gutter);
@@ -53,32 +53,32 @@
   flex-direction: column;
 }
 
-.ccip-hero__token-logo {
+.ccip-chain-hero__token-logo {
   border-radius: 50%;
 }
 
-.ccip-hero__top {
+.ccip-chain-hero__top {
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: var(--space-16x);
 }
 
-.ccip-hero__chainSearch {
+.ccip-chain-hero__chainSearch {
   width: 358px;
 }
 
-.ccip-hero__details {
+.ccip-chain-hero__details {
   display: grid;
   gap: var(--space-4x);
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
 
-.ccip-hero__feeTokens {
+.ccip-chain-hero__feeTokens {
   margin-top: var(--space-10x);
 }
 
-.ccip-hero__details__label {
+.ccip-chain-hero__details__label {
   /* Body/Body Semi S */
   font-family: "Inter";
   font-style: normal;
@@ -89,30 +89,30 @@
   color: #6c7585;
 }
 
-.ccip-hero__feeTokens__list {
+.ccip-chain-hero__feeTokens__list {
   display: flex;
   align-items: center;
   gap: var(--space-12x);
 }
 
-.ccip-hero__feeTokens__item {
+.ccip-chain-hero__feeTokens__item {
   display: flex;
   align-items: center;
   gap: var(--space-1x);
   color: #151a23;
 }
 
-.ccip-hero__feeTokens__item a {
+.ccip-chain-hero__feeTokens__item a {
   font-size: var(--space-4x) !important;
 }
 
-.ccip-hero__feeTokens__item__logo {
+.ccip-chain-hero__feeTokens__item__logo {
   width: var(--space-5x);
   height: var(--space5x);
   border-radius: 50%;
 }
 
-.ccip-hero__details__value {
+.ccip-chain-hero__details__value {
   /* Body/Body */
   font-family: "Inter";
   font-style: normal;
@@ -125,20 +125,20 @@
   color: #212732;
 }
 
-.ccip-hero__token-logo__symbol {
+.ccip-chain-hero__token-logo__symbol {
   font-weight: 500;
   font-size: 18px;
   color: var(--gray-500);
 }
 
 @media (min-width: 50em) {
-  .ccip-hero__content {
+  .ccip-chain-hero__content {
     max-width: 1440px;
   }
 }
 
 @media (min-width: 992px) {
-  .ccip-hero__content {
+  .ccip-chain-hero__content {
     grid-template-columns: 1fr 1fr;
     padding-left: var(--space-10x);
     padding-right: var(--space-10x);
